[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "repomon library for common components"
documentation = "http://docs.rs/repomon"
homepage = "http://docs.rs/repomon"
keywords = ["git", "repository", "monitor", "config"]
license = "MIT/Apache-2.0"
name = "repomon"
readme = "README.md"
repository = "https://github.com/rustyhorde/repomon"
version = "0.1.1"

[dependencies]
error-chain = "0"
getset = "0"
serde = "1"
serde_derive = "1"
toml = "0"
uuid = { version = "0", features = ["serde", "use_std", "v5"]}
url = "1"
regex = "0"

[dev-dependencies]
bincode = "0"
